--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,32 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+/* 79CFFF */
+
+.btn-blue{
+  background-color: #79CFFF;
+  border-radius: 50px;
+  padding: 5px 10px;
+  font-weight: 500;
+  margin-left: 4px;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.btn-black{
+  background-color: #333333;
+  color: #79CFFF;
+  border-radius: 50px;
+  padding: 15px 40px;
+  font-weight: 500;
 }
