--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,3 +19,12 @@
   padding: 15px 40px;
   font-weight: 500;
 }
+
+.btn-blueht{
+  background-color: #0E0F13;
+  color: #ffffff;
+  border-radius: 50px;
+  border: 2px solid #79CFFF;
+  padding: 15px 40px;
+  font-weight: 500;
+}
